[project]
name = "lsp-tree-sitter"
version = "0.2.2"
description = "A library to create language servers."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{ name = "Wu, Zhenyu", email = "wuzhenyu@ustc.edu" }]
keywords = ["json schema", "language server", "tree sitter"]
dependencies = [
  "jq>=1",
  "jsonschema>=4",
  "pygls>=2",
  "tree-sitter>=0.24",
]

[project.urls]
"Bug Report" = "https://github.com/neomutt/lsp-tree-sitter/issues"
Download = "https://github.com/neomutt/lsp-tree-sitter/releases"
Homepage = "https://lsp-tree-sitter.readthedocs.io"
Source = "https://github.com/neomutt/lsp-tree-sitter"

[project.optional-dependencies]
colorize = [
  "pygments>=2.20.0",
]
completion = [
  "shtab>=1.8.1",
]
dev = [
  "pytest-cov>=7.1.0",
]
misc = [
  "beautifulsoup4>=4.15.0",
  "markdown-it-py>=4.2.0",
  "platformdirs>=4.10.1",
  "pypandoc>=1.17",
]
toml = [
  "tomli-w>=1.2.0",
]
yaml = [
  "pyyaml>=6.0.3",
]

[build-system]
requires = ["uv_build<0.12"]
build-backend = "uv_build"

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "\\s*import tomli as tomllib",
]

[tool.doq]
template_path = "templates"

[tool.mdformat]
number = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = ["D205", "D400"]
preview = true

[tool.ruff.format]
docstring-code-format = true
preview = true
